# Shugu_stream

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  DEPLOY.md  LAUNCHER.md  Shugu-Start.cmd  Shugu-Status.cmd  Shugu-Stop.cmd  Shugu-VoiceBody-Setup.cmd  Shugu-VoiceBody-Start.cmd  Shugu-VoiceBody-Stop.cmd  docker-compose.yml
backend/: .coveragerc  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0002_asset_registry.py  0003_seed_registry_kinds.py  0004_user_accounts.py  0005_memory_agent.py  0006_memory_facts_hnsw.py  0007_scene_editor_tables.py  0008_director_tick_cache.py  0009_memory_episodes.py  0010_authored_scenes.py  0011_compactor_fields_memory_facts.py  0012_user_accounts_operator_flag.py  2b7bf3181178_initial_schema.py
backend/scripts/: proposed_animations.json  seed_director_demo.py  test_vrma_loader.py  voice_smoke_test.py
backend/shugu/: __init__.py  app.py  config.py
backend/shugu/adapters/: _persona_subject.py  brain_director_anthropic.py  brain_director_minimax.py  brain_director_ollama.py  brain_director_openai.py  brain_filter.py  brain_hermes.py  brain_hermes_tools.py  brain_memory_extractor.py  brain_shugu.py  hermes_state.py  injection_detector.py  moderation_basic.py  moderation_logging.py  personality_loader.py  sense_twitch.py  smtp_resend.py  stt_livekit_adapter.py  stt_streaming.py  tts_edge.py  tts_elevenlabs.py  tts_fallback.py  tts_minimax.py  vip_agent.py  vip_bridge_client.py
backend/shugu/agent/: __init__.py  action_parser.py  handlers.py  llm_thinker.py  loop.py  runner.py  tool_call_parser.py  tools.py  types.py  wiring.py
backend/shugu/auth/: dependencies.py  email_verify.py  jwt_tokens.py  password.py  rate_limit.py  user_tokens.py  viewer_token.py
backend/shugu/cli/: __init__.py  promote_operator.py
backend/shugu/core/: ambient_bank.py  ambient_scene.py  body_control.py  errors.py  event_bus.py  event_bus_factory.py  event_bus_redis.py  identity.py  mood.py  observability.py  protocols.py  quota.py  registry.py  types.py  viewer_count.py  vip_bridge.py  vip_toolset.py
backend/shugu/db/: models.py  models_scene_composer.py  session.py
backend/shugu/director/: __init__.py  background.py  brain_provider.py  canned_responses.py  debouncer.py  llm_client.py  models_director.py  orchestrator.py  prompt.py  scene_state.py  state_store.py  tag_parser.py  tick_cache.py  triggers.py  wiring.py
backend/shugu/domain/: __init__.py  assets_catalog_schemas.py  scene_composer_schemas.py  scene_editor_schemas.py
backend/shugu/memory/: __init__.py  _term_groups.py  agent.py  compactor.py  compactor_parsing.py  embedder.py  episodes.py  maintenance.py  models.py  query_expansion.py  redaction.py  sense_publish.py  types.py
backend/shugu/middleware/: __init__.py  security_headers.py
backend/shugu/observability/: __init__.py  log_config.py  metrics.py
backend/shugu/persona/: __init__.py  loader.py  prompt_fragment.py  serialization.py  state.py
backend/shugu/personalities/: filter.md  hermes_private.md  hermes_public.md  shugu.md
backend/shugu/pipeline/: ambient.py  body_router.py  extraction_worker.py  hermes_task.py  ingestion_worker.py  picker.py  queue.py  voice_duplex.py  workers.py
backend/shugu/policy/: __init__.py  decisions.py  matrix.py  modes.py
backend/shugu/regie/: __init__.py
backend/shugu/routes/: _ws_serializer.py  account.py  admin.py  admin_analytics.py  admin_moderation.py  admin_users.py  assets_catalog_api.py  auth.py  editor_ws.py  health.py  hermes_state_api.py  internal_vip.py  livekit_api.py  observatory.py  observatory_missions.py  operator_voice_ws.py  operator_ws.py  registry_api.py  scene_composer_api.py  scene_editor_api.py  test_director_api.py  viewer.py  visitor_ws.py  world_ws.py
backend/shugu/scene_composer/: __init__.py  catalog_scanner.py  player.py
backend/shugu/senses/: __init__.py  bus.py  types.py
backend/shugu/services/: __init__.py  analytics_queries.py  moderation_events.py
backend/shugu/voice/: __init__.py  audio_bridge.py  chunker.py  filler_bank.py  livekit_agent.py  livekit_publisher.py  llm_local.py  metrics.py  pipeline_metrics.py  recording.py  stt_local.py  tts_local.py  vad_driver.py  voice_runtime.py
backend/shugu/world/: __init__.py  publisher.py  reducers.py  state_store.py  types.py
backend/tests/: conftest.py
backend/tests/integration/: test_account_routes.py  test_admin_analytics_routes.py  test_admin_moderation_routes.py  test_agent_runner_lifespan.py  test_agent_wiring.py  test_auth_routes.py  test_auth_unification.py  test_director_e2e.py  test_editor_ws.py  test_extraction_pipeline.py  test_memory_agent_db.py  test_memory_agent_query_expansion_db.py  test_memory_compactor_db.py  test_memory_episodes_roundtrip.py  test_memory_extractor_db.py  test_memory_facts_hnsw_index.py  test_memory_maintenance_db.py  test_scene_composer_db.py  test_scene_editor_api.py  test_smoke_e2e_pipeline.py
backend/tests/unit/: test_action_parser.py  test_agent_loop.py  test_agent_runner.py  test_agent_runner_metrics.py  test_agent_runner_policy.py  test_agent_types.py  test_agent_wiring.py  test_arch_event_bus_broadcast.py  test_arch_layers_l0.py  test_arch_memory_isolation.py  test_assets_catalog_api.py  test_auth_dependencies.py  test_brain_memory_extractor.py  test_brain_shugu_persona.py  test_config.py  test_core_types.py  test_director_anthropic_brain.py  test_director_brain_provider.py  test_director_canned_responses.py  test_director_debouncer.py  test_director_llm_client.py  test_director_orchestrator.py  test_director_prompt.py  test_director_scene_change_relay.py  test_director_scene_state.py  test_director_state_store.py  test_director_tag_parser.py  test_director_test_api.py  test_director_tick_cache.py  test_director_triggers.py  test_director_vip_and_silence.py  test_director_workers.py  test_editor_ws.py  test_event_bus_inproc.py  test_event_bus_redis.py  test_extraction_worker.py  test_handlers.py  test_ingestion_worker.py  test_injection_detector.py  test_internal_vip_senses.py  (+54 more)
(+519 files in other folders)
