[project]
name = "shugu"
version = "0.1.0"
description = "AI VTuber multi-visiteurs + Hermes operator bridge"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "websockets>=13.0,<14.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "httpx>=0.27,<1.0",
    "redis>=5.0,<6.0",
    "sqlalchemy>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.13,<2.0",
    "pyjwt>=2.8,<3.0",
    "bcrypt>=4.1,<5.0",
    "python-ulid>=2.5,<4.0",
    "better-profanity>=0.7,<1.0",
    "structlog>=24.1,<25.0",
    "edge-tts>=7.0,<8.0",
    # Voice duplex (phase 5) — STT streaming + VAD. faster-whisper pulls CTranslate2
    # and a CUDA-capable Torch if GPU is available; CPU-only works on the target VPS.
    "faster-whisper>=1.0,<2.0",
    "webrtcvad-wheels>=2.0,<3.0",
    "numpy>=1.26,<3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shugu"]
